# llmworkbook

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: Quality Check.yml  codeql.yml  test.yml
Examples/: Example Arrays.py  Example DataFrames.py  Example Excel.py  Example Ollama.py  Example OpenAI.py  Example PromptSeries.py  example_usage.py
llm_workbook/: __init__.py  config.py  integrator.py  runner.py
llmworkbook/: __init__.py  config.py  integrator.py  providers.py  runner.py  utils.py  wrappers.py
llmworkbook/cli/: cli.py  cli_wrapper.py
llmworkbook/tests/: test_cli.py  test_config.py  test_integrator.py  test_runner.py  test_wrappers.py
scripts/: code_quality_check.sh  run_app.sh
